--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/dtolnay/dtoa-benchmark"
 anyhow = "1"
 arrayvec = "0.7"
 dtoa = "1.0.10"
+lexical-core = "1"
 rand = "0.9"
 ryu = "1.0.21"
 teju = "0.1.1"
